# interstellar

./: .containerignore  .env.example  .gitattributes  .gitignore  .gitmessage  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  docker-compose.yml  rust-toolchain.toml
.githooks/: commit-msg  pre-commit
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
apps/careerforge-api/: .containerignore  .env.example  AGENTS.md  Cargo.toml  Containerfile  README.md  podman.env.example
apps/careerforge-api/deploy/podman/: careerforge-api.container
apps/careerforge-api/src/: AGENTS.md  error.rs  main.rs  models.rs  routes.rs  state.rs
apps/task-manager-api/: .env.example  AGENTS.md  Cargo.toml  Dockerfile  README.md
apps/task-manager-api/src/: AGENTS.md  error.rs  handlers.rs  main.rs  models.rs
docs/: AGENTS.md  README.md  architecture.md  git.md  operations.md  production.md  security.md
docs/features/: AGENTS.md  careerforge-api.md  task-manager-api.md
infra/: AGENTS.md
infra/postgres/init/: 001-init.sql
infra/postgres/migrations/: 001-create-app-schemas.sql
scripts/: AGENTS.md  bootstrap-env.ps1  bootstrap-env.sh  check.ps1  check.sh  commit.ps1  commit.sh  compose-down.ps1  compose-down.sh  compose-up.ps1  compose-up.sh  create-github-repo.ps1  create-github-repo.sh  db-migrate.ps1  db-migrate.sh  db-shell.ps1  db-shell.sh  install-git-hooks.ps1  install-git-hooks.sh
